opam-version: "2.0"
maintainer: "kevgathuku@users.noreply.github.com"
authors: ["Kevin"]

homepage: "https://github.com/kevgathuku/kadi-reason"
bug-reports: "https://github.com/kevgathuku/kadi-reason/issues"
dev-repo: "git+https://github.com/kevgathuku/kadi-reason.git"
version: "dev"

# TODO Pick the relevant SPDX identifier <https://spdx.org/licenses/>
license: "Unlicense"

synopsis: "An Ocaml + Reaason starter project"

description: """
An Ocaml + Reaason starter project
"""

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "base"
  "core"
  "stdio"
  "dune"
  "merlin-extend"
  "ocaml-lsp-server"
  "reason"
  "utop"
  "ounit2" {with-test}
  "ocamlformat"
  "merlin-extend"
  "ppx_inline_test" { >= "0.16.0" }
]
